2011-11-14  Tony Chang  <tony@chromium.org>

        Remove the CSS3_FLEXBOX compile time flag and enable on all ports
        https://bugs.webkit.org/show_bug.cgi?id=72196

        Reviewed by Ojan Vafai.

        * Scripts/build-webkit:

2011-11-14  John Yani  <vanuan@gmail.com>

        new-run-webkit-tests should not be locale dependent https://bugs.webkit.org/show_bug.cgi?id=68691
        Override LOCALE to en_US.

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/layout_tests/port/base.py:

2011-11-14  Julien Chaffraix  <jchaffraix@webkit.org>

        [Chromium] build-webkit silently drops the features flags
        https://bugs.webkit.org/show_bug.cgi?id=72293

        Reviewed by Tony Chang.

        Chromium still ignores @features but now we give a warning!

        * Scripts/build-webkit: Check if one of the features is different
        from the default and print a warning in this case.

2011-11-14  David Kilzer  <ddkilzer@apple.com>

        run-leaks does not work on Lion?
        <http://webkit.org/b/71059>
        <rdar://problem/10428527>

        Reviewed by Adam Roben.

        The output of leaks(1) changed again in Lion to move the
        "leaks Report Version: 2.0" line from the first line of the
        output to just above the "Process " lines that run-leaks is
        interested in parsing.  This required using a more generic
        algorithm to find the start of the "Process " lines.

        * Scripts/run-leaks:
        (parseLeaksOutput): Make the code to skip headers more generic.
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v1.0.pl: Added.
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v2.0-new.pl: Added.
        * Scripts/webkitperl/run-leaks_unittest/run-leaks-report-v2.0-old.pl: Added.

2011-11-14  Lei Zhang  <thestig@chromium.org>

        Missing include in Tools/DumpRenderTree/chromium/AccessibilityUIElement.h:
        https://bugs.webkit.org/show_bug.cgi?id=72088
